--- a/src/app/Pages/employees/employees.component.html
+++ b/src/app/Pages/employees/employees.component.html
@@ -1,2 +1,6 @@
-<p class="bg-danger">Test</p> 
-<i class="fa-solid fa-house"></i>
+<app-list></app-list>
+<app-employee-form></app-employee-form>
+
+
+
+
